Chance to reuse discoveries